# tein

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  ROADMAP.md  TODO.md  build.rs  cliff.toml  crates.js  handoff.md  help.html  index.html  justfile  settings.html  src-files.js
tein/: Cargo.toml  all.html  attr.tein_fn.html  attr.tein_methods.html  attr.tein_module.html  attr.tein_type.html  build.rs  enum.Error.html  enum.Mode.html  enum.Value.html  fn.build_context_repl.html  fn.build_context_script.html  fn.history_path.html  fn.json_value_to_value.html  fn.main.html  fn.paren_depth.html  fn.parse_args.html  fn.run_repl.html  fn.run_script.html  fn.strip_shebang.html  index.html  sidebar-items.js  struct.Args.html  struct.Context.html  struct.ContextBuilder.html  struct.SharedTrackingWriter.html  struct.TimeoutContext.html  struct.TrackingWriter.html  type.Result.html
tein-bin/: Cargo.toml
tein-bin/src/: main.rs
tein-macros/: Cargo.toml
tein-macros/src/: lib.rs
tein-sexp/: Cargo.toml
tein-sexp/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  printer.rs
tein/context/: constant.CONTEXT_PTR.html  constant.DEFAULT_HEAP_MAX.html  constant.DEFAULT_HEAP_SIZE.html  constant.EXIT_REQUESTED.html  constant.EXIT_VALUE.html  constant.EXT_API.html  constant.FOREIGN_STORE_PTR.html  constant.INTERACTION_ENV.html  constant.IS_SANDBOXED.html  constant.PORT_STORE_PTR.html  constant.SANDBOX_COMMAND_LINE.html  constant.SANDBOX_ENV.html  constant.STUB_MODULE_MAP.html  enum.FsAccess.html  fn.build_ext_api.html  fn.check_fs_access.html  fn.command_line_trampoline.html  fn.current_process_id_trampoline.html  fn.environment_trampoline.html  fn.exit_code_from_raw.html  fn.exit_trampoline.html  fn.ext_register_type_impl.html  fn.ext_trampoline_bytes_length.html  fn.ext_trampoline_define_fn.html  fn.ext_trampoline_make_boolean.html  fn.ext_trampoline_make_bytes.html  fn.ext_trampoline_register_type.html  fn.ext_trampoline_register_vfs.html  fn.ext_trampoline_string_size.html  fn.extract_string_arg.html  fn.foreign_call_wrapper.html  fn.foreign_methods_wrapper.html  fn.foreign_type_methods_wrapper.html  fn.foreign_types_wrapper.html  fn.get_env_var_trampoline.html  fn.get_env_vars_trampoline.html  fn.interaction_environment_trampoline.html  fn.json_parse_trampoline.html  fn.json_stringify_trampoline.html  fn.load_trampoline.html  (+19 more)
tein/crypto/: fn.bytes_to_hex.html  fn.extract_input_bytes.html  fn.hash_bytevector.html  fn.hash_hex.html  index.html  sidebar-items.js
tein/error/: enum.Error.html  index.html  type.Result.html
tein/examples/: basic.rs  ffi.rs  floats.rs  foreign_types.rs  managed.rs  repl.rs  sandbox.rs
tein/ffi/: constant.SEXP_PROC_VARIADIC.html  fn.add_module_directory.html  fn.env_copy_named.html  fn.fs_policy_gate_set.html  fn.fuel_arm.html  fn.fuel_disarm.html  fn.fuel_exhausted.html  fn.get_eof.html  fn.get_false.html  fn.get_null.html  fn.get_true.html  fn.get_void.html  fn.load_standard_env.html  fn.load_standard_ports.html  fn.macro_expand_hook_clear.html  fn.macro_expand_hook_get.html  fn.macro_expand_hook_set.html  fn.make_custom_input_port.html  fn.make_custom_output_port.html  fn.make_error.html  fn.reader_char_is_reserved.html  fn.reader_dispatch_chars.html  fn.reader_dispatch_clear.html  fn.reader_dispatch_get.html  fn.reader_dispatch_set.html  fn.reader_dispatch_unset.html  fn.scheme_str.html  fn.sexp_add_module_directory_op.html  fn.sexp_applicablep.html  fn.sexp_apply.html  fn.sexp_apply_proc.html  fn.sexp_bignum_sign.html  fn.sexp_bignum_to_string.html  fn.sexp_bignump.html  fn.sexp_booleanp.html  fn.sexp_bytes_data.html  fn.sexp_bytes_length.html  fn.sexp_bytesp.html  fn.sexp_c_str.html  fn.sexp_c_string.html  (+184 more)
tein/filesystem/: fn.check_read.html  fn.check_write.html  fn.create_directory_trampoline.html  fn.current_directory_trampoline.html  fn.delete_directory_trampoline.html  fn.delete_file_trampoline.html  fn.directory_files_trampoline.html  fn.file_directory_trampoline.html  fn.file_exists_trampoline.html  fn.file_link_trampoline.html  fn.file_regular_trampoline.html  fn.file_size_trampoline.html  fn.make_err.html  fn.register_filesystem_trampolines.html  fn.rename_file_trampoline.html  index.html  sidebar-items.js
tein/foreign/: constant.XOR_STATE.html  enum.MethodLookup.html  fn.dispatch_foreign_call.html  fn.next_handle_id.html  index.html  sidebar-items.js  struct.ExtMethodEntry.html  struct.ExtTypeEntry.html  struct.ForeignObject.html  struct.ForeignStore.html  struct.MethodContext.html  struct.TypeEntry.html  trait.ForeignType.html  type.MethodFn.html
tein/json/: constant.MAX_DEPTH.html  fn.json_parse.html  fn.json_sexp_to_value.html  fn.json_stringify_raw.html  fn.json_value_to_value.html  index.html  sidebar-items.js
tein/managed/: enum.Mode.html  index.html  sidebar-items.js  struct.ThreadLocalContext.html
tein/port/: constant.XOR_STATE.html  enum.PortObject.html  fn.next_handle_id.html  index.html  sidebar-items.js  struct.PortStore.html
tein/raw/: fn.get_false.html  fn.get_null.html  fn.get_true.html  fn.get_void.html  fn.make_error.html  fn.sexp_booleanp.html  fn.sexp_bytes_data.html  fn.sexp_bytes_length.html  fn.sexp_bytesp.html  fn.sexp_c_str.html  fn.sexp_car.html  fn.sexp_cdr.html  fn.sexp_charp.html  fn.sexp_cons.html  fn.sexp_exceptionp.html  fn.sexp_flonum_value.html  fn.sexp_flonump.html  fn.sexp_integerp.html  fn.sexp_make_boolean.html  fn.sexp_make_bytes.html  fn.sexp_make_character.html  fn.sexp_make_fixnum.html  fn.sexp_make_flonum.html  fn.sexp_nullp.html  fn.sexp_pairp.html  fn.sexp_portp.html  fn.sexp_string_data.html  fn.sexp_string_size.html  fn.sexp_stringp.html  fn.sexp_symbolp.html  fn.sexp_unbox_character.html  fn.sexp_unbox_fixnum.html  fn.sexp_vectorp.html  index.html  sidebar-items.js  struct.GcRoot.html  type.sexp.html  type.sexp_sint_t.html
tein/safe_regexp/: constant.SAFE_REGEXP_SCM.html  constant.SAFE_REGEXP_SLD.html  fn.captures_to_match_vec.html  fn.ensure_regexp.html  fn.regexp_fold_wrapper.html  index.html  sidebar-items.js
tein/src/: context.rs  (+21 more)
(+685 files in other folders)
