[package]
name = "tein-macros"
version = "0.1.0"
edition = "2024"
authors = ["fey"]
license = "MIT OR Apache-2.0"
description = "proc macros for tein scheme interpreter"
repository = "https://github.com/emesal/tein"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
