[package]
name = "tein-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "proc macros for tein scheme interpreter"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
