[package]
name = "tein-sexp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "pure rust s-expression parser, printer, and serde data format"
repository.workspace = true
keywords = ["sexp", "s-expression", "scheme", "serde", "config"]
categories = ["parser-implementations", "encoding"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
