[package]
name = "tein"
version = "0.1.0"
edition = "2024"
authors = ["fey"]
license = "ISC"
publish = false
description = "embeddable r7rs scheme interpreter for rust, built on chibi-scheme"
repository = "https://github.com/emesal/tein"
keywords = ["scheme", "lisp", "scripting", "embedding", "r7rs"]
categories = ["embedded", "parser-implementations"]

[dependencies]
tein-macros = { path = "../tein-macros" }
tein-ext = { path = "../tein-ext" }
tein-sexp = { path = "../tein-sexp" }
libloading = "0.8"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
toml_crate = { package = "toml", version = "1.0", default-features = false, features = ["parse", "display", "serde"], optional = true }
uuid = { version = "1", features = ["v4", "fast-rng"], optional = true }

[dev-dependencies]
rustyline = { version = "17", features = ["with-file-history"] }

[features]
## json, toml, uuid, and time on by default — disable with `default-features = false` if you don't need them.
default = ["json", "toml", "uuid", "time"]
## enables `(tein json)` module with `json-parse` and `json-stringify`.
## pulls in serde + serde_json.
json = ["dep:serde_json", "dep:serde", "tein-sexp/serde"]
## enables `(tein toml)` module with `toml-parse` and `toml-stringify`.
## pulls in the toml crate (parse + display + serde features) and serde.
toml = ["dep:toml_crate", "dep:serde"]
## enables `(tein uuid)` module with `make-uuid`, `uuid?`, and `uuid-nil`.
## pulls in the uuid crate with v4 + fast-rng.
uuid = ["dep:uuid"]
## enables `(tein time)` module with `current-second`, `current-jiffy`, and `jiffies-per-second`.
## pure std::time — no external dependencies.
time = []
## enables chibi-scheme GC debugging instrumentation (+4 bytes/object overhead).
## adds magic-number header validation and pointer bounds checking before GC mark.
## useful for diagnosing heap corruption, dangling pointers, and unrooted locals.
debug-chibi = []

[build-dependencies]
cc = "1.0"
tein-sexp = { path = "../tein-sexp" }
