[package]
name = "tein"
version = "0.1.0"
edition = "2024"
authors = ["fey"]
license = "ISC"
publish = false
description = "embeddable r7rs scheme interpreter for rust, built on chibi-scheme"
repository = "https://github.com/emesal/tein"
keywords = ["scheme", "lisp", "scripting", "embedding", "r7rs"]
categories = ["embedded", "parser-implementations"]

[dependencies]
tein-macros = { path = "../tein-macros" }
tein-ext = { path = "../tein-ext" }
tein-sexp = { path = "../tein-sexp" }
libloading = "0.8"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
toml_crate = { package = "toml", version = "1.0", default-features = false, features = ["parse", "display", "serde"], optional = true }
uuid = { version = "1", features = ["v4", "fast-rng"], optional = true }
regex = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
blake3 = { version = "1", optional = true }
rand = { version = "0.9", optional = true }
ureq = { version = "3", default-features = false, features = ["rustls"], optional = true }

[dev-dependencies]
[features]
## json, toml, uuid, and time on by default — disable with `default-features = false` if you don't need them.
default = ["json", "toml", "uuid", "time", "regex", "crypto"]
## enables `(tein json)` module with `json-parse` and `json-stringify`.
## pulls in serde + serde_json.
json = ["dep:serde_json", "dep:serde", "tein-sexp/serde"]
## enables `(tein toml)` module with `toml-parse` and `toml-stringify`.
## pulls in the toml crate (parse + display + serde features) and serde.
toml = ["dep:toml_crate", "dep:serde"]
## enables `(tein uuid)` module with `make-uuid`, `uuid?`, and `uuid-nil`.
## pulls in the uuid crate with v4 + fast-rng.
uuid = ["dep:uuid"]
## enables `(tein time)` module with `current-second`, `current-jiffy`, and `jiffies-per-second`.
## pure std::time — no external dependencies.
time = []
## enables `(tein safe-regexp)` module with linear-time regex via rust `regex` crate.
## guarantees O(n) matching — no backtracking, no ReDoS.
regex = ["dep:regex"]
## enables `(tein crypto)` module with SHA-256, SHA-512, BLAKE3 hashing and CSPRNG.
## pulls in sha2, blake3, and rand crates.
crypto = ["dep:sha2", "dep:blake3", "dep:rand"]
## enables `(tein http)` module with HTTP client (GET/POST/PUT/DELETE) and TLS support.
## pulls in ureq with rustls. not included in default — network access is opt-in.
http = ["dep:ureq"]
## enables chibi-scheme GC debugging instrumentation (+4 bytes/object overhead).
## adds magic-number header validation and pointer bounds checking before GC mark.
## useful for diagnosing heap corruption, dangling pointers, and unrooted locals.
debug-chibi = []

[build-dependencies]
cc = "1.0"
tein-sexp = { path = "../tein-sexp" }
